// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`translations not match uploads sources, alongside a directly-uploaded file the config never covers 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  Directory sources created
◆  File 'sources/1_android.xml'
◆  File 'sources/2_android.xml'
◆  File 'sources/3_android.xml'"
`;

exports[`translations not match attempts to upload translations for all languages (none exist locally) 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
▲  File translations/it/1_android.xml does not exist in the specified location
▲  File translations/it/2_android.xml does not exist in the specified location
▲  File translations/it/3_android.xml does not exist in the specified location
▲  File translations/uk/1_android.xml does not exist in the specified location
▲  File translations/uk/2_android.xml does not exist in the specified location
▲  File translations/uk/3_android.xml does not exist in the specified location"
`;

exports[`translations not match attempts to upload translations for a single specified language (uk) 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
▲  File translations/uk/1_android.xml does not exist in the specified location
▲  File translations/uk/2_android.xml does not exist in the specified location
▲  File translations/uk/3_android.xml does not exist in the specified location"
`;

exports[`translations not match previews downloading translations once the config narrows to a single source file (dry run) 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
translations/it/1_android.xml
translations/uk/1_android.xml"
`;

exports[`translations not match previews the same narrowed dry run as a tree 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
.
╰─ translations
   ├─ it
   │  ╰─ 1_android.xml
   ╰─ uk
      ╰─ 1_android.xml"
`;

exports[`translations not match downloads translations for real, warning about the sources the narrowed config no longer covers 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project info
●  Project info fetched
●  Translations built
◆  File translations/it/1_android.xml extracted
◆  File translations/uk/1_android.xml extracted
●  Fetching project files
●  Project files fetched
▲  Downloaded translations don't match the current project configuration. The translations for the following sources will be omitted (use --verbose to get the list of the omitted translations):
	- java.properties (2)
	- sources/3_android.xml (2)
	- sources/2_android.xml (2)
Visit the https://crowdin.github.io/crowdin-cli/faq for more details
◆  Done"
`;

exports[`translations not match downloads translations again with --verbose, listing the omitted translation paths 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project info
●  Loading configuration from /private/var/folders/v9/x32vvmbs6h38d0yjvzcsw7qdv6g1xv/T/crowdin-e2e/85624-683824/translations-not-match/crowdin.yml file
●  Project info fetched
●  Translations built
◆  File translations/it/1_android.xml extracted
◆  File translations/uk/1_android.xml extracted
●  Fetching project files
●  Project files fetched
▲  Downloaded translations don't match the current project configuration. The translations for the following sources will be omitted (use --verbose to get the list of the omitted translations):
	- java.properties (2)
		- it/java.properties
		- uk/java.properties
	- sources/3_android.xml (2)
		- translations/it/3_android.xml
		- translations/uk/3_android.xml
	- sources/2_android.xml (2)
		- translations/it/2_android.xml
		- translations/uk/2_android.xml
Visit the https://crowdin.github.io/crowdin-cli/faq for more details
◆  Done"
`;

exports[`translations not match downloads translations for a single specified language (uk) 1`] = `
"●  Building translations for languages: uk
●  Building translations...
●  Downloading translations
●  Fetching project info
●  Project info fetched
●  Translations built
◆  File translations/uk/1_android.xml extracted
●  Fetching project files
●  Project files fetched
▲  Downloaded translations don't match the current project configuration. The translations for the following sources will be omitted (use --verbose to get the list of the omitted translations):
	- java.properties (1)
	- sources/3_android.xml (1)
	- sources/2_android.xml (1)
Visit the https://crowdin.github.io/crowdin-cli/faq for more details
◆  Done"
`;

exports[`translations not match downloads translations for a single specified language (uk) with --verbose 1`] = `
"●  Building translations for languages: uk
●  Building translations...
●  Downloading translations
●  Fetching project info
●  Loading configuration from /private/var/folders/v9/x32vvmbs6h38d0yjvzcsw7qdv6g1xv/T/crowdin-e2e/85624-683824/translations-not-match/crowdin.yml file
●  Project info fetched
●  Translations built
◆  File translations/uk/1_android.xml extracted
●  Fetching project files
●  Project files fetched
▲  Downloaded translations don't match the current project configuration. The translations for the following sources will be omitted (use --verbose to get the list of the omitted translations):
	- java.properties (1)
		- java.properties
	- sources/3_android.xml (1)
		- translations/uk/3_android.xml
	- sources/2_android.xml (1)
		- translations/uk/2_android.xml
Visit the https://crowdin.github.io/crowdin-cli/faq for more details
◆  Done"
`;

exports[`translations not match uploads sources to a brand-new branch 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  Directory sources created
◆  File 'sources/1_android.xml'
◆  File 'sources/2_android.xml'
◆  File 'sources/3_android.xml'"
`;

exports[`translations not match downloads translations for the branch, with the same configuration mismatch 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project info
●  Project info fetched
●  Translations built
◆  File translations/it/1_android.xml extracted
◆  File translations/uk/1_android.xml extracted
●  Fetching project files
●  Project files fetched
▲  Downloaded translations don't match the current project configuration. The translations for the following sources will be omitted (use --verbose to get the list of the omitted translations):
	- test-branch/sources/2_android.xml (2)
	- test-branch/sources/3_android.xml (2)
Visit the https://crowdin.github.io/crowdin-cli/faq for more details
◆  Done"
`;

exports[`translations not match downloads translations for the branch with --verbose 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project info
●  Loading configuration from /private/var/folders/v9/x32vvmbs6h38d0yjvzcsw7qdv6g1xv/T/crowdin-e2e/85624-683824/translations-not-match/crowdin.yml file
●  Project info fetched
●  Translations built
◆  File translations/it/1_android.xml extracted
◆  File translations/uk/1_android.xml extracted
●  Fetching project files
●  Project files fetched
▲  Downloaded translations don't match the current project configuration. The translations for the following sources will be omitted (use --verbose to get the list of the omitted translations):
	- test-branch/sources/2_android.xml (2)
		- translations/it/2_android.xml
		- translations/uk/2_android.xml
	- test-branch/sources/3_android.xml (2)
		- translations/it/3_android.xml
		- translations/uk/3_android.xml
Visit the https://crowdin.github.io/crowdin-cli/faq for more details
◆  Done"
`;
